- Fix overflow-x - Fix bug custom order button

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
+body {
+  overflow-x: hidden;
+}
+
 .text-pink-1 {
     color: #f3b8bf;
 }
